--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+    --color-primary: rgb(76, 175, 79);
+    --color-primary-hover: rgb(56, 142, 60);
+    --color-secondary: rgb(77, 77, 77);
+    --color-accent: rgb(245, 247, 250);
+    --color-footer-text: rgb(240, 242, 245);
+    --color-footer-bg: rgb(38, 50, 56);
+    --font-inter: "Inter", sans-serif;
+}
+
+body {
+    @apply text-secondary font-inter;
+}
+
+header {
+    @apply py-8 px-20 bg-white shadow-md;
+}
+
+header ul, header div {
+    @apply gap-5
+}
+
+h1, h2, h3, h4 {
+    @apply font-semibold;
+}
+
+h1 {
+    @apply text-6xl mb-5;
+}
+
+h2 {
+    @apply text-3xl mb-4;
+}
+
+h3 {
+    @apply text-2xl mb-3;
+}
+
+h4 {
+    @apply text-xl mb-2 text-primary;
+}
+
+.break {
+    @apply block;
+}
+
+p {
+    @apply text-base font-normal mb-5;
+}
+
+img {
+    @apply max-w-full h-auto w-fit;
+}
+
+section {
+    @apply py-12 px-20 bg-white nth-[odd]:bg-accent;
+}
+
+
+button {
+    @apply bg-primary hover:bg-primary-hover text-white font-semibold py-2 px-4 rounded;
+}
+
+.insights-grid {
+    @apply grid grid-cols-1 md:grid-cols-2 gap-6;
+}
+
+.flex-row-center {
+    @apply flex flex-row justify-between items-center;
+}
+
+.flex-col-center {
+    @apply flex flex-col justify-center;
+}
+
+footer {
+    @apply py-12 px-10 gap-5 bg-footer-bg text-footer-text;
+}
